[package]
name = "wable"
version = "0.1.0"
authors = ["fixpt <57822954+fixpt@users.noreply.github.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp-backtrace = { version = "0.13.0", features = [
    "esp32",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = { version = "0.19.0", features = [ "esp32" ] }
esp-println = { version = "0.10.0", features = ["esp32", "log"] }
log = { version = "0.4.21" }
embedded-io = "0.6.1"
esp-wifi = { version = "0.7.1", features = [
    "esp32",
    "ble",
] }
heapless = { version = "0.8.0", default-features = false }
critical-section = "1.1.2"
fugit = "0.3.7"
pcf8563 = { git = "https://github.com/invpt/pcf8563-rs", package = "pcf8563", rev = "efc4e55" }
wepd = { git = "https://github.com/invpt/wepd", package = "wepd" }
embedded-graphics = "0.8.1"
embedded-hal-bus = "0.2.0"
[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
